--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@react-google-maps/api": "^2.20.3",
-    "@tailwindcss/vite": "^4.0.14",
+    "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.8.3",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
@@ -24,7 +24,7 @@
     "react-router-dom": "^6.28.0",
     "remixicon": "^4.5.0",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.0.14",
+    "tailwindcss": "^4.0.15",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -32,6 +32,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "daisyui": "^5.0.9",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
