--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+    "lucide-react": "^0.483.0",
     "openrouteservice": "^0.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
