--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.8.3",
     "gsap": "^3.12.5",
+    "herwheels": "file:..",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.483.0",
